namespace_browser: fixing sometimes misaligned progressbar

--- a/src/components/browse/index.css
+++ b/src/components/browse/index.css
@@ -46,6 +46,7 @@
 
 .browse-main-wrapper core-tooltip {
   position: absolute;
+  top: 0;
 }
 
 .browse-main-wrapper h2 {
